.cicd/helm/observability/ingress-prometheus-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obs-kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: alertmanager.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obs-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
